@@ -7,6 +7,30 @@ CREATE FUNCTION pgstrom.gpucache_recovery(regclass)
   LANGUAGE C CALLED ON NULL INPUT;
 
 ---
+--- Information Schema
+---
+CREATE TYPE pgstrom.__cuda_program_info AS (
+  program_id    bigint,
+  refcnt        int,
+  crc32         int,
+  target_cc     int,
+  status        text,
+  extra_flags   int,
+  kern_define   text,
+  kern_source   text,
+  ptx_image     text,
+  error_code    int,
+  error_msg     text
+);
+CREATE FUNCTION pgstrom.cuda_program_info()
+  RETURNS SETOF pgstrom.__cuda_program_info
+  AS 'MODULE_PATHNAME','pgstrom_cuda_program_info'
+  LANGUAGE C STRICT;
+CREATE VIEW pgstrom.cuda_program_info AS
+  SELECT * FROM pgstrom.cuda_program_info();
+
+
+---
 --- Deprecated Functions
 ---
 DROP FUNCTION IF EXISTS pgstrom.arrow_fdw_export_cupy(regclass, text[], int);
