@@ -1785,6 +1785,183 @@ cudaProgramBuilderMain(Datum arg)
 	pgbuilder_state->builders[builder_id].latch = NULL;
 }
 
+/*
+ * pgstrom_cuda_program_info - information view of CUDA programs
+ */
+PG_FUNCTION_INFO_V1(pgstrom_cuda_program_info);
+struct cuda_program_info_t
+{
+	struct cuda_program_info_t *next;
+	ProgramId		program_id;
+	pg_crc32		crc;
+	int				refcnt;
+	int				target_cc;
+	const char	   *status;
+	uint32			extra_flags;
+	char		   *kern_define;
+	char		   *kern_source;
+	char		   *ptx_image;
+	int				error_code;
+	char		   *error_msg;
+};
+typedef struct cuda_program_info_t	cuda_program_info_t;
+
+static void *
+collect_cuda_program_info(void)
+{
+	cuda_program_info_t *results = NULL;
+
+	SpinLockAcquire(&pgcache_head->lock);
+	PG_TRY();
+	{
+		program_cache_entry *entry;
+		cuda_program_info_t *info;
+		dlist_iter	iter;
+		int			i;
+
+		for (i=0; i < PGCACHE_HASH_SIZE; i++)
+		{
+			dlist_foreach (iter, &pgcache_head->pgid_slots[i])
+			{
+				entry = dlist_container(program_cache_entry,
+										pgid_chain, iter.cur);
+				info = palloc0(sizeof(cuda_program_info_t));
+				info->program_id = entry->program_id;
+				info->crc = entry->crc;
+				info->refcnt = entry->refcnt;
+				info->target_cc = entry->target_cc;
+				info->extra_flags = entry->extra_flags;
+
+				if (entry->build_chain.prev && entry->build_chain.next)
+					info->status = "PENDING";
+				else if (entry->ptx_image == NULL)
+					info->status = "IN PROGRESS";
+				else if (entry->ptx_image == CUDA_PROGRAM_BUILD_FAILURE)
+					info->status = "FAILED";
+				else
+					info->status = "READY";
+
+				if (entry->kern_define)
+					info->kern_define = pnstrdup(entry->kern_define,
+												 entry->kern_deflen);
+				if (entry->kern_source)
+					info->kern_source = pnstrdup(entry->kern_source,
+												 entry->kern_srclen);
+				if (entry->ptx_image == CUDA_PROGRAM_BUILD_FAILURE)
+					info->ptx_image = CUDA_PROGRAM_BUILD_FAILURE;
+				else if (entry->ptx_image)
+					info->ptx_image = pnstrdup(entry->ptx_image,
+											   entry->ptx_length);
+				info->error_code = entry->error_code;
+				if (entry->error_msg)
+					info->error_msg = pstrdup(entry->error_msg);
+
+				info->next = results;
+				results = info;
+			}
+		}
+	}
+	PG_CATCH();
+	{
+		SpinLockRelease(&pgcache_head->lock);
+		PG_RE_THROW();
+	}
+	PG_END_TRY();
+	SpinLockRelease(&pgcache_head->lock);
+
+	return results;
+}
+
+Datum
+pgstrom_cuda_program_info(PG_FUNCTION_ARGS)
+{
+	FuncCallContext *fncxt;
+	cuda_program_info_t *info;
+	Datum		values[11];
+	bool		isnull[11];
+	HeapTuple	tuple;
+
+	if (SRF_IS_FIRSTCALL())
+	{
+		TupleDesc		tupdesc;
+		MemoryContext	oldcxt;
+
+		fncxt = SRF_FIRSTCALL_INIT();
+		oldcxt = MemoryContextSwitchTo(fncxt->multi_call_memory_ctx);
+
+		tupdesc = CreateTemplateTupleDesc(11);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 1,
+						   "program_id", INT8OID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 2,
+						   "refcnt", INT4OID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 3,
+                           "crc32", INT4OID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 4,
+						   "target_cc", INT4OID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 5,
+						   "status", TEXTOID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 6,
+						   "extra_flags", INT4OID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 7,
+						   "kern_define", TEXTOID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 8,
+						   "kern_source", TEXTOID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 9,
+						   "ptx_image", TEXTOID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 10,
+						   "error_code", INT4OID, -1, 0);
+		TupleDescInitEntry(tupdesc, (AttrNumber) 11,
+						   "error_msg", TEXTOID, -1, 0);
+		fncxt->tuple_desc = BlessTupleDesc(tupdesc);
+		fncxt->user_fctx = collect_cuda_program_info();
+
+		MemoryContextSwitchTo(oldcxt);
+	}
+	fncxt = SRF_PERCALL_SETUP();
+
+	info = fncxt->user_fctx;
+	if (!info)
+		SRF_RETURN_DONE(fncxt);
+	fncxt->user_fctx = info->next;
+
+	memset(isnull, 0, sizeof(isnull));
+	values[0] = Int64GetDatum(info->program_id);
+	values[1] = Int32GetDatum(info->refcnt);
+	values[2] = Int32GetDatum(info->crc);
+	values[3] = Int32GetDatum(info->target_cc);
+	values[4] = CStringGetTextDatum(info->status);
+	values[5] = Int32GetDatum(info->extra_flags);
+	if (info->kern_define)
+		values[6] = CStringGetTextDatum(info->kern_define);
+	else
+		isnull[6] = true;
+
+	if (info->kern_source)
+		values[7] = CStringGetTextDatum(info->kern_source);
+	else
+		isnull[7] = true;
+
+	if (info->ptx_image &&
+		info->ptx_image != CUDA_PROGRAM_BUILD_FAILURE)
+		values[8] = CStringGetTextDatum(info->ptx_image);
+	else
+		isnull[8] = true;
+
+	if (info->error_msg)
+	{
+		values[9] = Int32GetDatum(info->error_code);
+		values[10] = CStringGetTextDatum(info->error_msg);
+	}
+	else
+	{
+		isnull[9] = true;
+		isnull[10] = true;
+	}
+	tuple = heap_form_tuple(fncxt->tuple_desc, values, isnull);
+
+	SRF_RETURN_NEXT(fncxt, HeapTupleGetDatum(tuple));
+}
+
 static void
 cudaProgramBuilderWakeUp(bool error_if_no_builders)
 {
